# clever-gate

./: .cleverignore  .env.example  .gitignore  Dockerfile  Makefile  setup.sh  start.sh
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/seeds/: 0002_admin_seed.py
backend/alembic/versions/: 0001_initial_schema.py  0002_system_logs.py  0003_system_logs.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  deps.py  metrics.py
backend/app/api/admin/: __init__.py  auth.py  dashboard.py  keys.py  logs.py  providers.py  users.py  ws.py
backend/app/api/v1/: __init__.py  chat.py  completions.py  embeddings.py  health.py  models.py
backend/app/auth/: api_key.py  dependencies.py  jwt.py  passwords.py
backend/app/cache/: exact.py
backend/app/core/: concurrency.py  engine.py  pooling.py  streaming.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  api_key.py  provider.py  system_log.py  tracking.py  user.py
backend/app/middleware/: logging.py  rate_limit.py  request_id.py
backend/app/observability/: embedding.py  log_consumer.py  log_pipeline.py  logging.py  metrics.py
backend/app/payload/: aggregator.py  splitter.py  tokenizer.py
backend/app/providers/: base.py  litellm_adapter.py  registry.py  router_builder.py
backend/app/routing/: balancer.py  breaker.py  cooldown.py
backend/app/schemas/: admin.py  openai.py
backend/app/services/: __init__.py  cache.py  keys.py  providers.py  spend.py  users.py
backend/app/utils/: crypto.py
backend/tests/: conftest.py  test_api_key.py  test_app.py  test_cache.py  test_crypto.py  test_jwt.py  test_passwords.py  test_splitter.py
clevercloud/: clever.json
docker/: Dockerfile  entrypoint.sh  (+5 more)
(+42 files in other folders)
